--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,23 @@ body {
   background-color: white;
   font-family: verdana;
 }
+
+nav {
+  display: flex;
+  background-color: dodgerBlue;
+  padding: 1rem;
+  justify-content: space-around;
+}
+
+nav a {
+  color: white;
+  padding: 0.5rem;
+}
+
+nav a.selected {
+  border: solid 1px white;
+}
+
 #container {
   border: solid 1px black;
   padding: 1rem;
@@ -42,7 +59,23 @@ body {
   margin: 0;
 }
 
+.prof {
+  background: url('prof_photo.png');
+  height: 500px;
+  background-size: cover;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 64px;
+  text-shadow: 4px 4px black;
+}
+
 @media (max-width: 500px){
+  nav {
+    flex-direction: column;
+  }
   .two-column .left .card {
     width: 100%;
   }
